# fastmp

./: .clang-format  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-wheels.yml  python-package.yml
python/fastmp/: __init__.py
src/: bench.cpp  bindings.cpp  core.cpp  core.hpp  dot_product.cpp  fastmp.cpp  fastmp.hpp  quickmp.hpp  stats.cpp  stomp.cpp  stomp.vcpp
tests/: test_fastmp.py  test_quickmp.py
